--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "simple-weather",
+  "homepage": "https://acpopper.github.io/small-weather-app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.8.3",
+    "gh-pages": "^6.3.0",
     "vue": "^3.4.38"
   },
   "devDependencies": {
